[package]
name = "exodus_core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
firestore = { version = "0.25", features = ["rustls"] }
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'

[workspace]